k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sidis-ingress
  namespace: sidis
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: sidis.local
    http:
      paths:
      - path: /api/patients
        pathType: Prefix
        backend:
          service:
            name: patient-service-1
            port:
              number: 3000
      - path: /api/appointments
        pathType: Prefix
        backend:
          service:
            name: appointment-service-1
            port:
              number: 4000
      - path: /api/physicians
        pathType: Prefix
        backend:
          service:
            name: physician-service-1
            port:
              number: 5000
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
